# miden-compiler

./: Cargo.toml
codegen/masm/: Cargo.toml
codegen/masm/intrinsics/: mem.masm
codegen/masm/src/: artifact.rs  events.rs  intrinsics.rs  lib.rs
codegen/masm/src/emit/: mod.rs  primop.rs
codegen/masm/src/lower/: component.rs  lowering.rs  utils.rs
codegen/masm/src/lower/expected/: utils_emit_binary_search_1_case.hir  utils_emit_binary_search_2_cases.hir  utils_emit_binary_search_3_cases.hir  utils_emit_binary_search_4_cases.hir  utils_emit_binary_search_5_cases.hir  utils_emit_binary_search_7_cases.hir  utils_emit_if.hir  utils_emit_if_nested.hir
dialects/scf/: Cargo.toml
dialects/scf/src/: lib.rs
dialects/scf/src/transforms/: cfg_to_scf.rs
dialects/scf/src/transforms/expected/: cfg_to_scf_lift_conditional_early_exit_after.hir  cfg_to_scf_lift_conditional_early_exit_before.hir  cfg_to_scf_lift_multiple_exit_nested_while_loop_after.hir  cfg_to_scf_lift_multiple_exit_nested_while_loop_before.hir  cfg_to_scf_lift_nested_while_loop_after.hir  cfg_to_scf_lift_nested_while_loop_before.hir  cfg_to_scf_lift_simple_conditional_after.hir  cfg_to_scf_lift_simple_conditional_before.hir  cfg_to_scf_lift_simple_while_loop_after.hir  cfg_to_scf_lift_simple_while_loop_before.hir
examples/counter-contract/: Cargo.toml  rust-toolchain.toml
frontend/wasm/: Cargo.toml
frontend/wasm/src/: config.rs
frontend/wasm/src/code_translator/: mod.rs  tests.rs
frontend/wasm/src/code_translator/expected/: memory_grow.hir  memory_size.hir
frontend/wasm/src/component/: lift_exports.rs  lower_imports.rs
frontend/wasm/src/intrinsics/: debug.rs  intrinsic.rs  mod.rs
frontend/wasm/src/miden_abi/: mod.rs
frontend/wasm/src/module/: build_ir.rs  func_translator.rs  function_builder_ext.rs
hir/: Cargo.toml
hir-macros/: Cargo.toml
hir-macros/src/: lib.rs  operation.rs
hir-symbol/: Cargo.toml
hir-type/: Cargo.toml
hir/src/: derive.rs  dialects.rs  lib.rs  pass.rs
hir/src/dialects/: test.rs
hir/src/dialects/builtin/: builders.rs
hir/src/dialects/builtin/builders/: component.rs  function.rs  module.rs  world.rs
hir/src/dialects/builtin/ops/: component.rs  function.rs  global_variable.rs  interface.rs  module.rs  world.rs
hir/src/dialects/test/: builders.rs
hir/src/dialects/test/ops/: binary.rs  constants.rs  mem.rs
hir/src/ir/: context.rs  print.rs  traits.rs  verifier.rs
hir/src/ir/operation/: builder.rs
hir/src/ir/symbols/: table.rs
hir/src/ir/traits/: types.rs
hir/src/matchers/: matcher.rs
hir/src/pass/: instrumentation.rs  manager.rs  pass.rs
hir/src/patterns/: pattern.rs
midenc-debug/: Cargo.toml
midenc-session/: Cargo.toml
midenc-session/src/: emit.rs  lib.rs  libs.rs  outputs.rs
midenc-session/src/options/: mod.rs
sdk/base/: CHANGELOG.md  Cargo.toml
sdk/base-macros/: CHANGELOG.md  Cargo.toml
sdk/base-macros/src/: account_component_metadata.rs
sdk/base-sys/: Cargo.toml
sdk/base-sys/src/: base_sys_wit.rs  lib.rs
sdk/base-sys/src/bindings/: account.rs  note.rs  storage.rs  tx.rs  types.rs
sdk/base-sys/wit/: miden-core-base.wit
sdk/base/src/: base_wit.rs  lib.rs
sdk/base/wit/: miden.wit
sdk/sdk/: Cargo.toml
test-harness/: README.md
test-harness/test-harness-derive/: Cargo.toml  README.md
test-harness/test-harness-derive/src/: lib.rs
test-harness/test-harness-macros/: Cargo.toml
test-harness/test-harness-macros/src/: lib.rs
test-harness/test-harness-macros/src/attributes/: attributes.rs  mod.rs
tests/integration/: Cargo.toml
tests/integration-network/: Cargo.toml
tests/integration-network/src/mockchain/: basic_wallet.rs  counter_contract.rs  counter_contract_no_auth.rs  counter_contract_rust_auth.rs  helpers.rs
tests/integration/expected/: abi_transform_stdlib_blake3_hash.masm  abi_transform_tx_kernel_get_id.wat  abi_transform_tx_kernel_get_inputs_4.masm  add_felt.masm  add_felt.wat  add_i16.masm  add_i32.masm  add_i64.masm  add_i8.masm  add_u16.masm  add_u32.masm  add_u64.masm  add_u8.masm  adv_load_preimage.masm  and_bool.masm  band_i16.masm  band_i32.masm  band_i64.masm  band_i8.masm  band_u16.masm  band_u32.masm  band_u64.masm  band_u8.masm  bnot_bool.masm  bnot_i16.masm  bnot_i32.masm  bnot_i64.masm  bnot_i8.masm  bnot_u16.masm  bnot_u32.masm  bnot_u64.masm  bnot_u8.masm  bor_i16.masm  bor_i32.masm  bor_i64.masm  bor_i8.masm  bor_u16.masm  bor_u32.masm  bor_u64.masm  bor_u8.masm  (+100 more)
tests/integration/expected/examples/: basic_wallet.masm  basic_wallet_tx_script.masm  counter.hir  counter.masm  counter.wat  counter_note.hir  counter_note.masm  counter_note.wat  fib.masm  p2id.masm  storage_example.hir  storage_example.masm  storage_example.wat
tests/integration/expected/rust_sdk/: cross_ctx_account.hir  cross_ctx_account.masm  cross_ctx_account.wat  cross_ctx_account_word.masm  cross_ctx_account_word_arg.masm  cross_ctx_note.hir  cross_ctx_note.masm  cross_ctx_note.wat  cross_ctx_note_word.masm  cross_ctx_note_word_arg.masm
tests/integration/expected/types/: array.masm  static_mut.masm
tests/integration/src/: compiler_test.rs  lib.rs
tests/integration/src/cargo_proj/: mod.rs
tests/integration/src/rust_masm_tests/: apps.rs  examples.rs  instructions.rs  intrinsics.rs  mod.rs  rust_sdk.rs  types.rs
tests/integration/src/rust_masm_tests/abi_transform/: stdlib.rs  tx_kernel.rs
tests/integration/src/testing/: setup.rs
tests/rust-apps-wasm/rust-sdk/cross-ctx-account/: Cargo.toml
tests/rust-apps-wasm/rust-sdk/cross-ctx-account/wit/: cross-ctx-account.wit
tools/cargo-miden/: Cargo.toml  README.md
tools/cargo-miden/src/: compile_masm.rs  dependencies.rs  lib.rs  main.rs  non_component.rs  outputs.rs  target.rs
tools/cargo-miden/src/cargo_component/: bindings.rs  config.rs  lock.rs  metadata.rs  mod.rs  registry.rs  target.rs
tools/cargo-miden/src/cargo_component/core/: lock.rs  mod.rs  registry.rs  terminal.rs
tools/cargo-miden/src/commands/: new_project.rs
tools/cargo-miden/tests/: build.rs  project_type.rs
tools/expect-test/: Cargo.toml
tools/expect-test/src/: lib.rs
(+61 files in other folders)
