[workspace]
resolver = "2"
members = [
    "benches",
    "codegen/*",
    "dialects/*",
    "eval",
    "frontend/*",
    "hir",
    "hir-analysis",
    "hir-macros",
    "hir-symbol",
    "hir-transform",
    "midenc",
    "midenc-compile",
    "midenc-driver",
    "midenc-session",
    "sdk/felt-repr/*",
    "sdk/field",
    "sdk/alloc",
    "sdk/base",
    "sdk/base-macros",
    "sdk/base-sys",
    "sdk/sdk",
    "sdk/stdlib-sys",
    "tools/*",
    "tests/integration",
    "test-harness/*",
    "tests/integration-network",
]
exclude = [
    "sdk/.cargo",
    "tests/",
    "examples",
]

[workspace.package]
version = "0.6.0"
rust-version = "1.92"
authors = ["Miden contributors"]
description = "An intermediate representation and compiler for Miden Assembly"
repository = "https://github.com/0xMiden/compiler"
homepage = "https://github.com/0xMiden/compiler"
documentation = "https://github.com/0xMiden/compiler"
categories = ["compilers"]
keywords = ["compiler", "miden"]
license = "MIT"
readme = "README.md"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "2.4"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
blink-alloc = { version = "0.4", default-features = false, features = [
    "alloc",
    "nightly",
] }
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "suggestions",
    "error-context",
] }
cranelift-entity = "0.120"
compact_str = { version = "0.9", default-features = false }
env_logger = "0.11"
hashbrown = { version = "0.15", features = ["nightly"] }
Inflector = "0.11"
intrusive-collections = "0.9"
inventory = "0.3"
log = "0.4"

# Miden Dependencies
miden-assembly = { version = "0.19", default-features = false }
miden-core = { version = "0.19", default-features = false }
miden-debug = { version = "0.4.1" }
miden-debug-types = { version = "0.19", default-features = false }
miden-assembly-syntax = { version = "0.19", default-features = false }
miden-formatting = { version = "0.1", default-features = false }
miden-lib = { version = "0.12", default-features = false, features = [
    "with-debug-info",
] }
miden-objects = { version = "0.12", default-features = false }
miden-processor = { version = "0.19", default-features = false }
miden-stdlib = { version = "0.19", default-features = false, features = [
    "with-debug-info",
] }
miden-mast-package = { version = "0.19", default-features = false }
miette = { package = "miden-miette", version = "7.1.1" }
paste = "1.0"
parking_lot = "0.12"
parking_lot_core = "0.9"
petgraph = { version = "0.8", default-features = false, features = [
    "graphmap"
] }
pretty_assertions = "1.0"
proptest = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
rustc-hash = { version = "2.0", default-features = false }
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "serde_derive",
    "alloc",
    "rc",
] }
heck = "0.5"

smallvec = { version = "1.14", default-features = false, features = [
    "union",
    "const_generics",
    "const_new",
    "drain_filter",
] }
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "derive",
    "extra-traits",
    "printing",
] }
thiserror = { package = "miden-thiserror", version = "1.0" }
toml = { version = "0.8", features = ["preserve_order"] }
tokio = { version = "1.39.2", features = ["rt", "time", "macros", "rt-multi-thread"] }
wat = "1.0.69"
wasmprinter = "0.227"
wasmparser = { version = "0.227", default-features = false, features = [
    "features",
    "component-model",
    "validate",
    "simd",
] }

# Workspace crates
midenc-codegen-masm = { version = "0.6.0", path = "codegen/masm" }
midenc-dialect-arith = { version = "0.6.0", path = "dialects/arith" }
midenc-dialect-hir = { version = "0.6.0", path = "dialects/hir" }
midenc-dialect-scf = { version = "0.6.0", path = "dialects/scf" }
midenc-dialect-cf = { version = "0.6.0", path = "dialects/cf" }
midenc-dialect-ub = { version = "0.6.0", path = "dialects/ub" }
midenc-hir = { version = "0.6.0", path = "hir" }
midenc-hir-analysis = { version = "0.6.0", path = "hir-analysis" }
midenc-hir-eval = { version = "0.6.0", path = "eval" }
midenc-hir-macros = { version = "0.6.0", path = "hir-macros" }
midenc-hir-symbol = { version = "0.6.0", path = "hir-symbol" }
midenc-hir-transform = { version = "0.6.0", path = "hir-transform" }
midenc-frontend-wasm = { version = "0.6.0", path = "frontend/wasm" }
midenc-compile = { version = "0.6.0", path = "midenc-compile" }
midenc-driver = { version = "0.6.0", path = "midenc-driver" }
midenc-session = { version = "0.6.0", path = "midenc-session" }
cargo-miden = { version = "0.6.0", path = "tools/cargo-miden" }
miden-integration-tests = { path = "tests/integration" }
midenc-expect-test = { path = "tools/expect-test" }
miden-test-harness = { path = "test-harness/test-harness-lib" }
miden-test-harness-macros = { path = "test-harness/test-harness-macros" }

[patch.crates-io]
#miden-assembly = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
#miden-assembly = { path = "../miden-vm/assembly" }
#miden-assembly-syntax = { path = "../miden-vm/assembly-syntax" }
#miden-core = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
#miden-core = { path = "../miden-vm/core" }
#miden-client = { git = "https://github.com/0xMiden/miden-client", rev = "4099516c08c9a56c6d1271fddfc798f40da0d702" }
miden-debug = { git = "https://github.com/0xMiden/miden-debug", tag = "v0.4.4" }
miden-block-prover = { path = "../miden-base-harness/crates/miden-block-prover" }
miden-lib = { path = "../miden-base-harness/crates/miden-lib" }
miden-objects = { path = "../miden-base-harness/crates/miden-objects" }
miden-testing = { path = "../miden-base-harness/crates/miden-testing" }
miden-tx = { path = "../miden-base-harness/crates/miden-tx" }
miden-tx-batch-prover = { path = "../miden-base-harness/crates/miden-tx-batch-prover" }
#miden-debug-types = { path = "../miden-vm/crates/debug/types" }
#miden-processor = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
#miden-processor = { path = "../miden-vm/processor" }
#miden-lib = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
#miden-objects = { git = "https://github.com/0xMiden/miden-base", rev = "8a50c8f98529f9a78655385e3e78a6de44db9316" }
#miden-stdlib = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
#miden-stdlib = { path = "../miden-vm/stdlib" }
#miden-mast-package = { git = "https://github.com/0xMiden/miden-vm", rev = "614cd7f9b52f45238b0ab59c71ebb49325051e5d" }
#miden-mast-package = { path = "../miden-vm/package" }


[profile.dev]
lto = false
# Needed for 'inventory' to work
codegen-units = 1

[profile.release]
opt-level = 2
debug = true
codegen-units = 1
lto = "fat"

# The following crates are always built with optimizations
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

# Speed up the test profile (proving times)
# ============================================================
# The test package itself needs optimization
[profile.test.package.midenc-integration-network-tests]
opt-level = 3

# Core Miden packages
[profile.test.package.miden-processor]
opt-level = 3

[profile.test.package.miden-prover]
opt-level = 3

[profile.test.package.winter-prover]
opt-level = 3

[profile.test.package.miden-client]
opt-level = 3

[profile.test.package.miden-lib]
opt-level = 3

[profile.test.package.miden-tx]
opt-level = 3

# Additional crypto and math-heavy dependencies
[profile.test.package.miden-crypto]
opt-level = 3

[profile.test.package.winter-crypto]
opt-level = 3

[profile.test.package.winter-air]
opt-level = 3

[profile.test.package.winter-math]
opt-level = 3

[profile.test.package.miden-objects]
opt-level = 3

[profile.test.package.miden-core]
opt-level = 3

[profile.test.package.miden-assembly]
opt-level = 3

[profile.test.package.miden-stdlib]
opt-level = 3

# Compiler packages that might be used in tests
[profile.test.package.midenc-frontend-wasm]
opt-level = 3

[profile.test.package.midenc-session]
opt-level = 3

[profile.test.package.miden-debug]
opt-level = 3
# ============================================================

[profile.dev.package.dissimilar]
opt-level = 3

[profile.dev.package.regex-syntax]
opt-level = 3

[profile.dev.package.onig]
opt-level = 3

[profile.dev.package.miden-crypto]
opt-level = 3

# Speed up the local network integration tests (proving times)
# ============================================================
[profile.dev.package.miden-processor]
opt-level = 3

[profile.dev.package.miden-prover]
opt-level = 3

[profile.dev.package.winter-prover]
opt-level = 3

[profile.dev.package.miden-client]
opt-level = 3

[profile.dev.package.miden-lib]
opt-level = 3

[profile.dev.package.miden-tx]
opt-level = 3
# ============================================================
