[package]
name = "miden-base-macros"
description = "Provides proc macro support for Miden rollup SDK"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
miden-objects.workspace = true
semver.workspace = true
toml.workspace = true
syn.workspace = true

[dev-dependencies]
miden-objects = { workspace = true, features = ["std"] }
