[package]
name = "miden-base-sys"
description = "Miden rollup Rust bingings and MASM library"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
miden-assembly.workspace = true
miden-stdlib-sys = { version = "0.0.8", path = "../stdlib-sys" }

[features]
default = []
# WIT files for Wasm Component Model
"wit" = []
