[package]
name = "miden-base"
description = "Miden rollup Rust SDK"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
miden-base-sys = { version = "0.1.0", path = "../base-sys" }
miden-stdlib-sys = { version = "0.1.0", path = "../stdlib-sys" }
miden-base-macros = { version = "0.1.0", path = "../base-macros" }

[features]
default = []
wit = ["miden-base-sys/wit", "miden-stdlib-sys/wit"]
