[package]
name = "miden"
description = "Miden SDK"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
miden-sdk-alloc = { version = "0.1.0", path = "../alloc" }
miden-stdlib-sys = { version = "0.1.0", path = "../stdlib-sys" }
miden-base = { version = "0.1.0", path = "../base" }
miden-base-sys = { version = "0.1.0", path = "../base-sys" }

[features]
default = []
wit = ["miden-base/wit", "miden-base-sys/wit", "miden-stdlib-sys/wit"]
