[package]
name = "miden-test-harness-derive"
description = "Derive macros used internally."
publish = false
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
# Miden dependencies
miden-mast-package.workspace = true
miden-testing = "0.12.4"

# External dependencies
quote.workspace = true
syn.workspace = true
darling.workspace = true
anyhow.workspace = true
proc-macro2.workspace = true
